Remove BLOCKCHAIN_PROVIDER from all code

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,15 +1,6 @@
 # SPDX-License-Identifier: Apache-2.0
 message(STATUS "Vertices SDK location: ${CMAKE_CURRENT_SOURCE_DIR}")
 
-if ($ENV{BLOCKCHAIN_PROVIDER})
-    set(BLOCKCHAIN_PROVIDER $ENV{BLOCKCHAIN_PROVIDER})
-elseif(NOT BLOCKCHAIN_PROVIDER)
-    message(STATUS "Defaulting to Algorand")
-    set(BLOCKCHAIN_PROVIDER algorand)
-endif()
-
-message(STATUS "Vertices SDK provider: ${BLOCKCHAIN_PROVIDER}")
-
 set(VERTICES_SRC_FILES
         ${CMAKE_CURRENT_SOURCE_DIR}/account.c
         ${CMAKE_CURRENT_SOURCE_DIR}/base64.c
@@ -18,9 +9,9 @@ set(VERTICES_SRC_FILES
         ${CMAKE_CURRENT_SOURCE_DIR}/sha512_256.c
         ${CMAKE_CURRENT_SOURCE_DIR}/vertices_errors.c
         ${CMAKE_CURRENT_SOURCE_DIR}/vertices.c
-        ${CMAKE_CURRENT_SOURCE_DIR}/${BLOCKCHAIN_PROVIDER}/${BLOCKCHAIN_PROVIDER}_parser.c
-        ${CMAKE_CURRENT_SOURCE_DIR}/${BLOCKCHAIN_PROVIDER}/${BLOCKCHAIN_PROVIDER}_provider.c
-        ${CMAKE_CURRENT_SOURCE_DIR}/${BLOCKCHAIN_PROVIDER}/${BLOCKCHAIN_PROVIDER}_transaction.c
+        ${CMAKE_CURRENT_SOURCE_DIR}/algorand/algorand_parser.c
+        ${CMAKE_CURRENT_SOURCE_DIR}/algorand/algorand_provider.c
+        ${CMAKE_CURRENT_SOURCE_DIR}/algorand/algorand_transaction.c
         ${CMAKE_CURRENT_SOURCE_DIR}/../external/mpack/src/mpack/mpack-common.c
         ${CMAKE_CURRENT_SOURCE_DIR}/../external/mpack/src/mpack/mpack-reader.c
         ${CMAKE_CURRENT_SOURCE_DIR}/../external/mpack/src/mpack/mpack-platform.c
@@ -39,7 +30,6 @@ string(LENGTH "${CMAKE_SOURCE_DIR}/" SOURCE_PATH_SIZE)
 
 if (COMPILE_UNIX)
 
-    add_definitions(-DBLOCKCHAIN_PROVIDER=${BLOCKCHAIN_PROVIDER})
     add_definitions("-DSOURCE_PATH_SIZE=${SOURCE_PATH_SIZE}")
 
     add_library(vertices STATIC ${VERTICES_SRC_FILES})
@@ -71,8 +61,6 @@ if (COMPILE_UNIX)
 
 else ()
     target_compile_options(mbedcrypto PRIVATE -DMBEDTLS_CONFIG_FILE=<${CMAKE_CURRENT_SOURCE_DIR}/include/mbedtls_config.h>)
-
-    add_definitions(-DBLOCKCHAIN_PROVIDER=${BLOCKCHAIN_PROVIDER})
 
     add_library(vertices STATIC ${VERTICES_SRC_FILES})
     target_include_directories(vertices PUBLIC ../include PRIVATE ${VERTICES_INC_DIRS})
