Refactor util files

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,10 +3,10 @@ message(STATUS "Vertices SDK location: ${CMAKE_CURRENT_SOURCE_DIR}")
 
 set(VERTICES_SRC_FILES
         ${CMAKE_CURRENT_SOURCE_DIR}/account.c
-        ${CMAKE_CURRENT_SOURCE_DIR}/base64.c
-        ${CMAKE_CURRENT_SOURCE_DIR}/base32.c
-        ${CMAKE_CURRENT_SOURCE_DIR}/http_weak.c
-        ${CMAKE_CURRENT_SOURCE_DIR}/sha512_256.c
+        ${CMAKE_CURRENT_SOURCE_DIR}/utils/base64.c
+        ${CMAKE_CURRENT_SOURCE_DIR}/utils/base32.c
+        ${CMAKE_CURRENT_SOURCE_DIR}/utils/http_weak.c
+        ${CMAKE_CURRENT_SOURCE_DIR}/utils/sha512_256.c
         ${CMAKE_CURRENT_SOURCE_DIR}/vertices_errors.c
         ${CMAKE_CURRENT_SOURCE_DIR}/vertices.c
         ${CMAKE_CURRENT_SOURCE_DIR}/algorand/algorand_parser.c
