--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,11 +1,13 @@
 PROJ_DIR := .
 BUILD := build
 
+compile: CPPUTEST_BUILD_RULE=start
+
 $(BUILD):
 	mkdir $(BUILD)
 
 clean:
-	rm -rf $(BUILD)
+	rm -rf $(BUILD)ever
 
 all: clean $(BUILD)
 	cd $(BUILD) && cmake ..
