--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 
-project(VerticesTop C CXX)
+project(vertices_sdk_tests C CXX)
 set(CPPUTEST_HOME /home/ubuntu/cpputest)
 get_filename_component(VERTICES_TEST_ROOT . ABSOLUTE)
 set(VERTICES_ROOT ${VERTICES_TEST_ROOT}/..)
@@ -99,4 +99,5 @@ include_directories(${INC_FOLDERS})
 add_subdirectory(src/BasicTX)
 add_subdirectory(src/Vertices)
 add_subdirectory(src/Account)
+add_subdirectory(src/Base32)
 
