"add:testcases_of_base64"

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -100,4 +100,5 @@ add_subdirectory(src/BasicTX)
 add_subdirectory(src/Vertices)
 add_subdirectory(src/Account)
 add_subdirectory(src/Base32)
+add_subdirectory(src/Base64)
 
