"refactor:vertices&unix_eample_cmake_for_library&executable_and_add:link_sodium&curl_to_vertices"

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,8 @@ include(utils/utils.cmake)
 
 message(STATUS "💎 Loading targets")
 
+# Set built target ex.  unix_example or vertices.
+set(BUILT_TARGET "vertices")
 # Module path to find libs
 set(CMAKE_MODULE_PATH ${VERTICES_ROOT}/utils/)
 
