"update:build_env_with_MSVC_for_dll_creation&add:target_propertices_of_vertices"

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -39,6 +39,12 @@ if (COMPILE_UNIX)
         add_library(vertices STATIC ${VERTICES_SRC_FILES})
     endif()
 
+    set_target_properties( vertices
+            PROPERTIES
+            ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
+            LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
+            RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
+            )
 
     target_include_directories(vertices
             PUBLIC
